--- a/biblio.html
+++ b/biblio.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>Bibliographie « Concevoir et réaliser son questionnaire » </title>
 <style>
-    #main{width: 42em;font: 1em/1.4 "Cambria",Georgia, sans-serif;}
+    #main{width: 42em;font: 1em/1.4 "Cambria",Georgia, sans-serif; padding:0% 0% 25% 25%; }
 p.comment {font-weight: bold;}
 h1 {
   text-align: center;
