oubli de ref par Villar et al.

--- a/biblio.html
+++ b/biblio.html
@@ -31,7 +31,7 @@ Les références sont d'abord organisées en grandes thématiques, puis listées
 <li><a href="#confid">Confidentialité et questions sensibles</a></li>
 <li><a href="#lang">Multilinguisme</a></li>
 <li><a href="#temps">Temps de passation, longueur du questionnaire, fatigue des sondages</a></li>
-<li><a href="#false">Risques de falsification</a></li>
+<li><a href="#fals">Risques de falsification</a></li>
 <li><a href="#banques">Banques de questions</a></li>
 <li><a href="#nomenc">Nomenclatures et standards</a></li>
 
@@ -75,7 +75,7 @@ Quelques références générales&nbsp;: </p>
   <div class="csl-entry">Smit, J. H., Deeg, D. J. H., &amp; Schmand, B. A. (1997). Asking the Age Question in Elderly Populations : A Reverse Record Check Study. <i>The Journals of Gerontology: Series B</i>, <i>52B</i>(4), P175‑P177. <a href="https://doi.org/10.1093/geronb/52B.4.P175">https://doi.org/10.1093/geronb/52B.4.P175</a></div>
   <span class="Z3988" title="url_ver=Z39.88-2004&amp;ctx_ver=Z39.88-2004&amp;rfr_id=info%3Asid%2Fzotero.org%3A2&amp;rft_id=info%3Adoi%2F10.1093%2Fgeronb%2F52B.4.P175&amp;rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Ajournal&amp;rft.genre=article&amp;rft.atitle=Asking%20the%20Age%20Question%20in%20Elderly%20Populations%3A%20A%20Reverse%20Record%20Check%20Study&amp;rft.jtitle=The%20Journals%20of%20Gerontology%3A%20Series%20B&amp;rft.stitle=The%20Journals%20of%20Gerontology%3A%20Series%20B&amp;rft.volume=52B&amp;rft.issue=4&amp;rft.aufirst=Johannes%20H.&amp;rft.aulast=Smit&amp;rft.au=Johannes%20H.%20Smit&amp;rft.au=Dorly%20J.%20H.%20Deeg&amp;rft.au=Ben%20A.%20Schmand&amp;rft.date=1997-07-01&amp;rft.pages=P175-P177&amp;rft.spage=P175&amp;rft.epage=P177&amp;rft.issn=1079-5014"></span>
 </div>
-<h2 id="confid">Confidentialité - questions sensibles <a href="#sommaire"><span title="Retour au sommaire" style="font-size: 60%">↩</span></a></h2>
+<h2 id="confid">Confidentialité et questions sensibles <a href="#sommaire"><span title="Retour au sommaire" style="font-size: 60%">↩</span></a></h2>
 <p class="comment">La confidentialité et l'anonymat ont des enjeux légaux, éthiques, et méthodologiques. L'anonymat réel peut être extrêmement difficile à assurer dans un questionnaire, ce qui peut avoir un impact sur l'organisation à mettre en oeuvre, et sur la qualité des réponses obtenues. Comment concevoir un questionnaire pour limiter ces problèmes ?
 <div class="csl-bib-body" style="line-height: 2; margin-left: 2em; text-indent:-2em;">
 
@@ -130,6 +130,9 @@ Quelques références générales&nbsp;: </p>
   <span class="Z3988" title="url_ver=Z39.88-2004&amp;ctx_ver=Z39.88-2004&amp;rfr_id=info%3Asid%2Fzotero.org%3A2&amp;rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Ajournal&amp;rft.genre=article&amp;rft.atitle=Effects%20of%20Different%20Types%20of%20Progress%20Indicators%20on%20Drop-Out%20Rates%20in%20Web%20Surveys&amp;rft.jtitle=Social%20Psychology&amp;rft.aufirst=Uwe&amp;rft.aulast=Matzat&amp;rft.au=Uwe%20Matzat&amp;rft.au=Chris%20Snijders&amp;rft.au=Wouter%20van%20der%20Horst&amp;rft.date=2009-02-10&amp;rft.issn=1864-9335&amp;rft.language=en"></span>
   <div class="csl-entry">Porter, S. R., Whitcomb, M. E., &amp; Weitzer, W. H. (2004). Multiple surveys of students and survey fatigue. <i>New Directions for Institutional Research</i>, <i>2004</i>(121), 63‑73. <a href="https://doi.org/10.1002/ir.101">https://doi.org/10.1002/ir.101</a></div>
   <span class="Z3988" title="url_ver=Z39.88-2004&amp;ctx_ver=Z39.88-2004&amp;rfr_id=info%3Asid%2Fzotero.org%3A2&amp;rft_id=info%3Adoi%2F10.1002%2Fir.101&amp;rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Ajournal&amp;rft.genre=article&amp;rft.atitle=Multiple%20surveys%20of%20students%20and%20survey%20fatigue&amp;rft.jtitle=New%20Directions%20for%20Institutional%20Research&amp;rft.volume=2004&amp;rft.issue=121&amp;rft.aufirst=Stephen%20R.&amp;rft.aulast=Porter&amp;rft.au=Stephen%20R.%20Porter&amp;rft.au=Michael%20E.%20Whitcomb&amp;rft.au=William%20H.%20Weitzer&amp;rft.date=2004-01-01&amp;rft.pages=63-73&amp;rft.spage=63&amp;rft.epage=73&amp;rft.issn=1536-075X&amp;rft.language=en"></span>
+  <div class="csl-entry">Villar, A., Callegaro, M., &amp; Yang, Y. (2013). Where Am I? A Meta-Analysis of Experiments on the Effects of Progress Indicators for Web Surveys. <i>Social Science Computer Review</i>, <i>31</i>(6), 744‑762. <a href="https://doi.org/10.1177/0894439313497468">https://doi.org/10.1177/0894439313497468</a></div>
+  <span class="Z3988" title="url_ver=Z39.88-2004&amp;ctx_ver=Z39.88-2004&amp;rfr_id=info%3Asid%2Fzotero.org%3A2&amp;rft_id=info%3Adoi%2F10.1177%2F0894439313497468&amp;rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Ajournal&amp;rft.genre=article&amp;rft.atitle=Where%20Am%20I%3F%20A%20Meta-Analysis%20of%20Experiments%20on%20the%20Effects%20of%20Progress%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20Indicators%20for%20Web%20Surveys&amp;rft.jtitle=Social%20Science%20Computer%20Review&amp;rft.volume=31&amp;rft.issue=6&amp;rft.aufirst=Ana&amp;rft.aulast=Villar&amp;rft.au=Ana%20Villar&amp;rft.au=Mario%20Callegaro&amp;rft.au=Yongwei%20Yang&amp;rft.date=2013-12-01&amp;rft.pages=744-762&amp;rft.spage=744&amp;rft.epage=762&amp;rft.issn=0894-4393&amp;rft.language=en"></span>
+
 </div>
 <h2 id="fals">Risques de falsification <a href="#sommaire"><span title="Retour au sommaire" style="font-size: 60%">↩</span></a></h2>
 <p class="comment">En fonction du contexte de passation du questionnaire, la falsification des réponses peut être un risque à considérer. Quelles mesures prendre pour le limiter&nbsp;?</p>
